--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../lib/bootstrap.min.css" type="text/css" rel="stylesheet">
-        <link href="popup.css" type="text/css" rel="stylesheet">
+        <!-- <link href="../lib/bootstrap.min.css" type="text/css" rel="stylesheet">
+        <link href="popup.css" type="text/css" rel="stylesheet"> -->
         <link href="../lib/css/material-design-icons.css" type="text/css" rel="stylesheet">
         <link href="../lib/css/vuetify.min.css" type="text/css" rel="stylesheet">
         <meta charset="utf-8"/>
