--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,17 +8,23 @@
         <meta charset="utf-8"/>
         <script src="https://localhost:8099"></script>
     </head>
-    <body>
+    <body style="font-size: 100%; width: 400px;"> <!-- Ubuntu injects some 75% crap -->
         <div id="main">
         </div>
         <script src="../lib/detectWebExtensions.js"></script>
         <script src="../lib/tp/browser-polyfill.min.js"></script>
         <script src="../lib/dollar-polyfill.js"></script>
         <script src="../lib/i18n.js"></script>
+        <script src="../lib/moduleHack.js"></script>
+        <script src="../lib/tp/punycode.js"></script>
+        <script src="../lib/moduleUnhack.js"></script>
+        <script src="../lib/pslData.js"></script>
+        <script src="../lib/tp/publicsuffixlist.min.js"></script>
         <script src="../lib/pkg/vue.runtime.min.js"></script>
         <script src="../lib/pkg/vuex.min.js"></script>
         <script src="../lib/pkg/vuetify.min.js"></script>
         <script src="../common/common.js"></script>
+        <script src="../lib/firefoxBug1408996Workaround.js"></script>
         <script src="popup.js"></script>
     </body>
 </html>
