--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8"/>
         <script src="https://localhost:8099"></script>
     </head>
-    <body style="font-size: 100%; width: 400px;"> <!-- Ubuntu injects some 75% crap -->
+    <body style="font-size: 100%; width: 400px; height: 570px;"> <!-- Ubuntu injects some 75% font crap -->
         <div id="main">
         </div>
         <script src="../lib/detectWebExtensions.js"></script>
