--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow-y: hidden">
     <head>
         <!-- <link href="../lib/bootstrap.min.css" type="text/css" rel="stylesheet">
         <link href="popup.css" type="text/css" rel="stylesheet"> -->
@@ -8,8 +8,8 @@
         <meta charset="utf-8"/>
         <script src="https://localhost:8099"></script>
     </head>
-    <body style="font-size: 100%; width: 400px; height: 570px;"> <!-- Ubuntu injects some 75% font crap -->
-        <div id="main">
+    <body style="overflow-y: hidden; font-size: 100%; width: 400px; height: 570px;"> <!-- Ubuntu injects some 75% font crap -->
+        <div id="main" style="overflow-y: hidden">
         </div>
         <script src="../lib/detectWebExtensions.js"></script>
         <script src="../lib/tp/browser-polyfill.min.js"></script>
